# benchtpch

./: .gitignore
dbgen-src/: CMakeLists.txt  config.h  dss-with-pk.ddl  dss.ddl  makefile  makefile.suite  tpcd.h
tpch/: columnar_p.ddl  data_kit.sh
